lots of bugs on mobile touch

--- a/css/style.css
+++ b/css/style.css
@@ -53,7 +53,10 @@ header .logo{
     /* background-color: springgreen; */
     display: flex;
     align-items: center;
-    
+
+}
+.search-bar>*{
+    flex-basis: 50%; 
 }
 .search-bar .keywords{
     background-color: white;
@@ -77,6 +80,9 @@ header .logo{
     border-radius: 100vh;
     color: white;
     
+}
+.words-container{
+    display: flex;
 }
 ::placeholder { 
     color: white;
@@ -145,6 +151,12 @@ footer{
     flex-direction: column;
     justify-content: center;
 
+}
+.canvas-container{
+    display: flex;
+    justify-content: center;
+    /* height: 500px;
+    width: 500px; */
 }
 
 canvas{
@@ -271,38 +283,56 @@ button.move-down{
     .control-box >* input{
         height: 50px;
         width: 100%;
-        font-size: xx-large;
+        /* font-size: xx-large; */
     }
     .control-box >* {
-        font-size: x-large;
+        /* font-size: x-large; */
     }
     .control-box select{
-        font-size: xx-large;
+        /* font-size: xx-large; */
     }
     .btn-close-editor{
         width: 50px;
         height: 50px;
-        font-size: xx-large;
+        /* font-size: xx-large; */
     }
-    /* .meme-editor{
-        font-size: xx-large;
-    } */
+
 }
 
-/* @media screen and (max-width: 500px){
-    header{
-        max-width: 420px;
+@media screen and (max-width: 850px){
+    .layout{
+        width: 100%;
+        border-radius: 0;
     }
     .search-bar{
-        max-width: 420px;
+        height: fit-content;
+        display: flex;
+        flex-direction: column;
     }
-    footer{
-        max-width: 420px;
+    .input-container{
+        flex-basis: 50%;
+        width: 100%;
+        height: 50%;
     }
-    .meme-editor{
-        max-width: 420px;
+    .search-input{
+        flex-basis: 50%;
+        width: 100%;
+        height: 50px;
     }
-} */
+    .img-gallery{
+        display: grid;
+        justify-content: center;
+        row-gap: 20px;
+        column-gap: 20px;
+        grid-template-rows: auto ;
+        grid-template-columns: 1fr 1fr;
+    }
+    canvas{
+        width: 250px;
+        height: 250px;
+    }
+
+}
 
 
 /* need to figure out the modal location on phones */
